package io.github.kkngai.estorecheckout.model;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import java.time.LocalDateTime;

@Entity
@Table(name = "discounts")
@Data
@NoArgsConstructor
@AllArgsConstructor
public class Discount {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "discount_id")
    private Long discountId;

    @ManyToOne
    @JoinColumn(name = "product_id", referencedColumnName = "id", nullable = true)
    private Product product;

    @Column(nullable = false)
    private String description;

    @Column(name = "discount_type", nullable = false)
    private String discountType;

    @Column(columnDefinition = "TEXT")
    private String rules; // Store JSON as String

    @Column(name = "expiration_date", nullable = false)
    private LocalDateTime expirationDate;
} 